2009-12-21 Francois Suter <typo3@cobweb.ch>

	* Added protection against possible XSS attacks
	* Released to TER as version 2.9.2

2009-09-19 Francois Suter <typo3@cobweb.ch>

	* Corrected TCA configuration so that devlog records are properly allowed anywhere in the page tree

2009-09-15 Francois Suter <typo3@cobweb.ch>

	* Removed some left-over debug statements (sorry!)
	* Released to TER as version 2.9.1

2009-09-09 Francois Suter <typo3@cobweb.ch>

	* Added optimization option when deleting excess records from the devlog table
	* Updated the manual
	* Released to TER as version 2.9.0

2009-08-17 Francois Suter <typo3@cobweb.ch>

	* Changed engine database for devlog table to InnoDB

2009-03-26 Francois Suter <typo3@cobweb.ch>

	* Updated the manual
	* Released to TER as version 2.8.0

2009-03-24 Francois Suter <typo3@cobweb.ch>

	* Added check for extra data type
	* Added configuration for filtering extra data of excessive size

2009-03-09 Francois Suter <typo3@cobweb.ch>

	* Added checks for proper initialization of DB object on devlog call
	* Added custom categories for extension configuration options (usable as of TYPO3 4.3)

2009-03-02 Francois Suter <typo3@cobweb.ch>

	* Made CSH for severity.image non translatable (thanks to Steffen Muller)
	* Completed update of the manual
	* Relased to TER as version 2.7.0

2009-03-01 Francois Suter <typo3@cobweb.ch>

	* Modified the CSH text, in particular severity levels descriptions
	* Updated the manual

2009-02-26 Francois Suter <typo3@cobweb.ch>

	* Completed implementation of CSH for both log table view and TCEform single view
	* Removed UID column in log table view
	* Moved date column to first place and placed links to log runs on that column
	* Changed default order in Web > List view, most recent record on top (thanks to Steffen Muller)
	* Changed log table styles slightly to better match t3skin

2009-02-24 Francois Suter <typo3@cobweb.ch>
